/*
 *  Copyright (c) 2001-2009, Jean Tessier
 *  All rights reserved.
 *  
 *  Redistribution and use in source and binary forms, with or without
 *  modification, are permitted provided that the following conditions
 *  are met:
 *  
 *      * Redistributions of source code must retain the above copyright
 *        notice, this list of conditions and the following disclaimer.
 *  
 *      * Redistributions in binary form must reproduce the above copyright
 *        notice, this list of conditions and the following disclaimer in the
 *        documentation and/or other materials provided with the distribution.
 *  
 *      * Neither the name of Jean Tessier nor the names of his contributors
 *        may be used to endorse or promote products derived from this software
 *        without specific prior written permission.
 *  
 *  THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
 *  "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
 *  LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
 *  A PARTICULAR PURPOSE ARE DISCLAIMED.  IN NO EVENT SHALL THE REGENTS OR
 *  CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL,
 *  EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO,
 *  PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR
 *  PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF
 *  LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING
 *  NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS
 *  SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 */

package com.jeantessier.dependencyfinder;

import com.jeantessier.classreader.LoadEvent;
import com.jeantessier.classreader.LoadListenerBase;

public class VerboseListenerBase extends LoadListenerBase {
    private String ratioIndicator = "";

    protected String getRatioIndicator() {
        return ratioIndicator;
    }

    private void setRatioIndicator(String ratioIndicator) {
        this.ratioIndicator = ratioIndicator;
    }

    private int computeCurrentRatio() {
        return getCurrentGroup().getCount() * 100 / getCurrentGroup().getSize();
    }

    public void beginFile(LoadEvent event) {
        int previousRatio = computeCurrentRatio();

        super.beginFile(event);

        if (getCurrentGroup().getSize() > 0) {
            int newRatio = computeCurrentRatio();

            if (previousRatio != newRatio) {
                StringBuilder buffer = new StringBuilder(4);

                if (newRatio < 10) {
                    buffer.append(" ");
                }
                if (newRatio < 100) {
                    buffer.append(" ");
                }
                buffer.append(newRatio).append("%");

                setRatioIndicator(buffer.toString());
            } else {
                setRatioIndicator("");
            }
        } else {
            setRatioIndicator("");
        }
    }
}
