@startuml

skin rose
skinparam style strictuml
skinparam backgroundColor transparent

set separator none

package java.util {

    interface EventListener <<interface>> #transparent

}

package com.jeantessier.classreader {

    class LoadEvent {
        groupName
        filename
        classfile
        size
    }

    interface LoadListener <<interface>> {
        beginSession()
        beginGroup()
        beginFile()
        beginClassfile()
        endClassfile()
        endFile()
        endGroup()
        endSesion()
    }
    EventListener <|-- LoadListener
    LoadListener .> LoadEvent

    class LoadListenerDecorator
    LoadListener <|.. LoadListenerDecorator
    LoadListenerDecorator --> LoadListener : delegate

    class MultiReleaseFilter #lightgreen {
        maximumJdkVersion
        beginFile()
        beginClassfile()
        endClassfile()
        endFile()
    }
    LoadListenerDecorator <|-- MultiReleaseFilter

    class FilteringLoadListener
    LoadListenerDecorator <|-- FilteringLoadListener

    class ClassfileFilteringLoadListener {
        beginClassfile()
        endClassfile()
    }
    FilteringLoadListener <|-- ClassfileFilteringLoadListener

    class FileFilteringLoadListener {
        beginFile()
        endFile()
    }
    FilteringLoadListener <|-- FileFilteringLoadListener

    class GroupFilteringLoadListener {
        beginGroup()
        endGroup()
    }
    FilteringLoadListener <|-- GroupFilteringLoadListener

    class LoadListenerVisitorAdapter {
        endClassfile()
    }
    LoadListener <|.. LoadListenerVisitorAdapter
    LoadListenerVisitorAdapter -> Visitor

    class Monitor
    LoadListenerVisitorAdapter <|-- Monitor

    class LoadListenerBase
    LoadListener <|.. LoadListenerBase

    interface Visitor <<interface>> {
        accept(classfile)
    }

    class PackageMapper
    LoadListener <|.. PackageMapper

}

package com.jeantessier.dependencyfinder {

    class VerboseListenerBase
    LoadListenerBase <|-- VerboseListenerBase

}

package com.jeantessier.dependencyfinder.ant {

    class ant.VerboseListener as "VerboseListener"
    VerboseListenerBase <|-- ant.VerboseListener

}

package com.jeantessier.dependencyfinder.cli {

    class cli.VerboseListener as "VerboseListener"
    VerboseListenerBase <|-- cli.VerboseListener

    class ClassMatcher {
        includes
        excludes
    }
    LoadListenerBase <|-- ClassMatcher

}

package com.jeantessier.dependencyfinder.gui {

    class gui.VerboseListener as "VerboseListener"
    VerboseListenerBase <|-- gui.VerboseListener

}

com.jeantessier.classreader --[hidden]--> com.jeantessier.dependencyfinder

@enduml
